# differential-mandelbrot

./: CMakeLists.txt  Shader.h  frag.glsl  main.cpp  sliderwindow.cpp  sliderwindow.h  sliderwindow.ui  vert.glsl
